# Projects

./: README.md
CSE_231/: proj01.py  proj02.py  proj03.py  proj04.py  proj05.py  proj06.py  proj07.py  proj08.py  proj09.py  proj10.py  proj11.py
CSE_320/system1/: .lunar-lander.c.swp  lunar-lander  lunar-lander.c
CSE_320/system2/: Makefile  main.c  sys2  sys2.c
CSE_320/system5/: minors.S
CSE_320/system8/ship/: ship  (+3 more)
CSE_325/Project01/: Makefile.txt  cache-perf  cache-perf.cpp  out-3-10-7.txt  run.sh
CSE_325/Project02/: Makefile  proc-sig.cpp  run.sh  trace.txt
CSE_325/Project03/: Makefile  msu-msg.cpp
CSE_331/CC1/: README.xml  solution.py  tests.py
CSE_331/CC2/: CC2 Description.md  README.xml  linked_list.py  solution.py  tests.py
CSE_331/CC3/: README.xml  solution.py  specs.md  tests.py
CSE_331/CC4/: README.xml  solution.py  specs.md  tests.py
CSE_331/CC5/: README.xml  solution.py  specs.md  tests.py
CSE_331/CC6/: README.xml  description.md  solution.py  tests.py
CSE_331/CC7/: README.xml  description.md  solution.py  tests.py
CSE_331/CC8/: InventoryItems.py  Minecraft_Items.csv  README.xml  description.md  solution.py  tests.py
CSE_331/CC9/: DungeonGenerator.py  README.xml  description.md  solution.py  tests.py
CSE_331/Project1/: DLL.py  README.xml  description.md  google.csv  tests.py
CSE_331/Project2/: Node.py  Project2_Specs.md  README.xml  SLL.py  tests.py
CSE_331/Project3/: HybridSort.py  Project3_Specs.md  README.xml  plot.py  tests.py
CSE_331/Project4/: CircularDeque.py  README.xml  description.md  tests.py
CSE_331/Project5/: AVLTree.py  README.xml  description.md  tests.py
CSE_331/Project6/: README.xml  description.md  hashtable.py  mimir_testcases.py
CSE_331/Project7/: PriorityNode.py  PriorityQueue.py  README.xml  description.md  testcases.py
CSE_331/Project8/: Graph.py  README.xml  description.md  testcases.py
CSE_335 /Project2/: CMakeLists.txt  CanadianExperienceApp.cpp  CanadianExperienceApp.h  Silent Movie.anim
CSE_335 /Project2/MachineLib/: Arm.cpp  Arm.h  CMakeLists.txt  Component.cpp  Component.h  Gear.cpp  Gear.h  INegotiator.cpp  INegotiator.h  Lever.cpp  Lever.h  Machine.cpp  Machine.h  Machine1Factory.cpp  Machine1Factory.h  Machine2Factory.cpp  Machine2Factory.h  MachineActual.cpp  MachineActual.h  MachineDialog.cpp  MachineDialog.h  MachineFactory.cpp  MachineFactory.h  MachineStandin.cpp  MachineStandin.h  Motor.cpp  Motor.h  MovementSink.cpp  MovementSink.h  MovementSource.cpp  MovementSource.h  Piston.cpp  Piston.h  Polygon.cpp  Polygon.h  Rod.cpp  Rod.h  RodSink.cpp  RodSink.h  RotationSink.cpp  (+8 more)
CSE_335 /Project2/MachineLib/include/: machine-api.h
CSE_335 /Step1/: Animal.cpp  Animal.h  CMakeLists.txt  Chicken.cpp  Chicken.h  Cow.cpp  Cow.h  Farm.cpp  Farm.h  Goat.cpp  Goat.h  main.cpp
CSE_335 /Step2/: CMakeLists.txt  main.cpp
CSE_335 /Step2/Aquarium/AquariumLib/: Aquarium.cpp  Aquarium.h  AquariumView.cpp  AquariumView.h  CMakeLists.txt  Item.cpp  Item.h  MainFrame.cpp  MainFrame.h  pch.h
CSE_335 /Step3/: CMakeLists.txt
CSE_335 /Step3/Aquarium 5.00.06 PM/Tests/: AquariumTest.cpp  CMakeLists.txt  FishBetaTest.cpp  ItemTest.cpp
CSE_335 /Step4/: CMakeLists.txt
CSE_335 /Step4/Aquarium/: CMakeLists.txt
CSE_335 /Step4/Aquarium/AquariumLib/: Aquarium.cpp  Aquarium.h  AquariumView.cpp  AquariumView.h  CMakeLists.txt  DecorCastle.cpp  DecorCastle.h  Fish.cpp  Fish.h  FishAngler.cpp  FishAngler.h  FishBeta.cpp  FishBeta.h  FishNemo.cpp  FishNemo.h  Item.cpp  Item.h  MainFrame.cpp  MainFrame.h  ids.h  pch.h
CSE_335 /Step4/Aquarium/Tests/: AquariumTest.cpp  EmptyTest.cpp  FishBetaTest.cpp  ItemTest.cpp
CSE_335 /Step5/City/CityLib/: BoostVisitor.cpp  BoostVisitor.h  BuildingCounter.cpp  BuildingCounter.h  CMakeLists.txt  City.cpp  City.h  CityReport.cpp  CityReport.h  CityView.cpp  CityView.h  CoalmineVisitor.cpp  CoalmineVisitor.h  MainFrame.cpp  MainFrame.h  MemberReport.cpp  MemberReport.h  Tile.cpp  Tile.h  TileBuilding.cpp  TileBuilding.h  TileCoalmine.cpp  TileCoalmine.h  TileGarden.cpp  TileGarden.h  TileLandscape.cpp  TileLandscape.h  TileRoad.cpp  TileRoad.h  TileRocketPad.cpp  TileRocketPad.h  TileVisitor.cpp  TileVisitor.h  ids.h  pch.h
CSE_335 /Step6/: CMakeLists.txt  CanadianExperienceApp.cpp  Doxyfile.doxy  main.cpp
CSE_335 /Step7/: CanadianExperienceApp.h  pch.h
CSE_335 /Step7/CanadianExperienceLib/: Actor.cpp  Actor.h  AnimChannel.cpp  AnimChannel.h  AnimChannelAngle.cpp  AnimChannelAngle.h  AnimChannelPoint.cpp  AnimChannelPoint.h  CMakeLists.txt  Drawable.cpp  Drawable.h  HaroldFactory.cpp  HeadTop.cpp  HeadTop.h  ImageDrawable.cpp  MainFrame.cpp  Picture.cpp  Picture.h  Timeline.cpp  Timeline.h  TimelineDlg.cpp  TimelineDlg.h  VickyFactory.cpp  ViewEdit.cpp  ViewTimeline.cpp  ViewTimeline.h
CSE_402/HW03/: HW_3.ipynb
CSE_402/Project02/: Project_2.ipynb  drawOrientation.m
CSE_402/Project03/: CSE_402_Project_3.ipynb
CSE_841/: credit_card_approval__model_prediction-.ipynb
CSE_891/: Presentation 2.pptx  ~$Presentation 1 copy.pptx
Graph Convolutional Network (GCN) for Node Classification/: Project_requirement.pptx  adj.npz  labels.npy  project.ipynb  splits.json  submission.txt
MTH_314/: HW1-SS22-Systems_of_linear_equations_student.ipynb  HW2-SS22-Affine_transform-student.ipynb  HW3-SS22.ipynb  HW4_SS22.ipynb  HW5_student-SS22.ipynb
Neural Enhanced Decoding Model Reproduction and Enhancement/: evaluation.m  param_configs.m
credit card approval model prediction/: credit_card_approval__model_prediction.ipynb
(+328 files in other folders)
